# GenAI-assited-CRM-Tool

./: .build-test  .dockerignore  .gitignore  .release-please-manifest.json  AI_ASSISTANT_AUDIT.md  BOUNDARY_MAP.md  CHANGELOG.md  CLAUDE.md  CODEMAP.md  ENTERPRISE_GAPS.md  LAUNCH_READINESS.md  MODERNIZATION_AUDIT.md  PRODUCT_E2E_AUDIT.md  QUICK_WINS.md  README.md  RELEASE_CHECKLIST.md  REVIEW.md  REVIEW_COHESION_COUPLING.md  ROADMAP.txt  agents.md  architectur_improvement_plan.md  code_reviews.md  database_optimization.md  deployment.md  design-qa.md  docker-compose.performance.yml  docker-compose.yml  fix_comments.py  fix_dashboard_count.py  fix_date_test.patch  fix_date_test2.patch  fix_date_test3.patch  fix_date_test4.patch  fix_date_test5.patch  fix_import.py  fix_test.py  fix_test_attr.py  make_migration.sh  plan.md  post-deployment.md  (+9 more)
apps/api/: .dockerignore  .env.example  .release-please-version.json  Dockerfile  Dockerfile.worker  README.md  alembic.ini  constraints.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  role_permission_matrix.csv  run_tests.sh  test-requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_cases_module.py  0006_meta_integration.py  0008_integration_health.py  0009_backfill_integration_key.py  0010_ai_assistant.py  0011_ai_privacy_settings.py  0012_add_indexes.py  0013_migrate_casenotes.py  0014_add_audit_logs.py  0015_add_case_imports.py  0016_add_pipelines.py  (+212 more)
apps/api/app/: clamav_update.py  cli.py  main.py  scan_job_runner.py  types.py  worker.py  worker_service.py
apps/api/performance/: capture-manifest.json  critical-query-corpus.json  plan-expectations.json  statistics-allowlist.json
apps/api/scripts/: bootstrap_venv.ps1  lock_deps.ps1  pip_audit_guard.py  queryproof_consumer.py  seed_mock_data.py
apps/api/tests/: conftest.py  test_activity_service.py  test_admin_exports.py  test_admin_imports.py  test_admin_meta.py  test_ai_access.py  test_ai_action_approvals_access.py  test_ai_action_executor_scoping.py  test_ai_bulk_tasks.py  test_ai_chat_permissions.py  test_ai_chat_stream.py  test_ai_contract.py  test_ai_email_template_generation.py  test_ai_jobs.py  test_ai_privacy.py  test_ai_prompt_registry.py  test_ai_provider_focus_schedule_paths.py  test_ai_response_validation.py  test_ai_router_split.py  test_ai_studio.py  test_ai_usage_logging.py  test_ai_workflow.py  test_alert_service.py  test_analytics.py  test_analytics_query_efficiency.py  test_analytics_service_dates.py  test_analytics_service_refactor.py  test_app_version.py  test_appointment_email_delivery.py  test_appointments.py  test_appointments_and_integrations_failures.py  test_appointments_rbac.py  test_async_utils.py  test_attachment_scanning.py  test_attachment_security.py  test_attachment_security_fixes.py  test_attachment_upload_errors.py  test_attachment_validation.py  test_audit.py  test_audit_exports.py  (+302 more)
(+1513 files in other folders)
